[package]
name = "tessellate_image"
version = "0.1.0"
authors = ["Joseph Catrambone <jo.jcat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#nannou = "0.15"
image = "0.23"
imageproc = "0.22"
plotters = "0.3.0"
rand = "*"